# mentoring_minigame

./: Cargo.toml  app.js
assets/: level.gltf
src/: main.rs
src/plugins/: commands_plugin.rs  game_scene_plugin.rs  global_data_plugin.rs  hello_plugin.rs  input_plugin.rs  js_event_plugin.rs  js_plugin.rs  js_plugin_runtime.js  mod.rs  physics_test_plugin.rs
