[package]
name = "mentoring_minigame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.10.0", features= ["serialize"]}
bevy_rapier3d = "0.21.0"
deno_core = "0.174.0"
reqwest = "0.11.14"
serde = "1.0.158"
serde_json = "1.0.94"
tokio = { version = "1.25.0", features = ["full"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
